--- a/index.html
+++ b/index.html
@@ -1,49 +1,168 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Libscm : Self-collecting mutators for the C programming language" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>libscm: Short-term Memory for the C programming language</title>
+    <meta name="author" content="Computational Systems Group">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <!-- HTML5 support for IE6-8 of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-    <title>Libscm</title>
+    <link href="assets/css/bootstrap.min.css" type="text/css" rel="stylesheet" media="all">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+
+      @media (max-width: 980px) {
+        /* Enable use of floated navbar text */
+        .navbar-text.pull-right {
+          float: none;
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
+    </style>
+    <link href="assets/css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet" media="all">
+    <link href="assets/css/main.css" type="text/css" rel="stylesheet" media="all">
+
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script language="javascript" type="text/javascript">
+      $(document).ready(function () {
+        $("#pubs").load("libscm.html");
+      });
+
+    </script>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/cksystemsgroup/libscm">View on GitHub</a>
-
-          <h1 id="project_title">Libscm</h1>
-          <h2 id="project_tagline">Self-collecting mutators for the C programming language</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/cksystemsgroup/libscm/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/cksystemsgroup/libscm/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Scal</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#"><i class="icon-home icon-white"></i> Home</a></li>
+              <li><a href="#people">People</a></li>
+              <li><a href="#code">Code</a></li>
+              <li><a href="#publications">Publications</a></li>
+            </ul>
+            <ul class="nav pull-right">
+              <ul class="nav">
+                <li><a href="http://cs.uni-salzburg.at/~ck">Computational Systems Group</a></li>
+              </ul>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Other Projects
+                  <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a tabindex="-1" href="http://cksystemsgroup.github.com/scal">Scal</a></li>
+		  <li><a tabindex="-1" href="http://cksystemsgroup.github.com/acdc">ACDC</a></li>
+                  <li class="divider"></li>
+                  <li><a tabindex="-1" href="http://github.com/cksystemsgroup">cksystemsgroup</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Welcome to libscm</h3>
-      </section>
-    </div>
+    <div class="container">
+	    <div class="content">
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Libscm maintained by <a href="https://github.com/cksystemsgroup">cksystemsgroup</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <div class="page-header">
+          <h1>Short-term Memory for Self-collecting Mutators</h1>
+  	</div>
+	
+	<p>
+	We propose a new memory model called short-term memory for managing
+	objects on the heap. In contrast to the traditional persistent memory
+	model for heap management, objects in short-term memory expire after a
+	ﬁnite amount of time, which makes deallocation unnecessary. Instead,
+	expiration of objects may be extended, if necessary, by refreshing. We
+	have developed a concurrent, incremental, and non-moving implementation
+	of short-term memory for explicit refreshing called self-collecting
+	mutators that is based on programmer-controlled time and integrated
+	into state-of-the-art runtimes of three programming languages: C, Java,
+	and Go. All memory management operations run in constant time without
+	acquiring any locks modulo the underlying allocators. Our
+	implementation does not require any additional heap management threads,
+	hence the name. Expired objects may be collected anywhere between one
+	at a time for maximal incrementality and all at once for maximal
+	throughput and minimal memory consumption. The integrated systems are
+	heap management hybrids with persistent memory as default and
+	short-term memory as option. Our approach is fully backwards
+	compatible. Legacy code runs without any modiﬁcations with negligible
+	runtime overhead and constant per-object space overhead. Legacy code
+	can be modiﬁed to take advantage of short-term memory by having some
+	but not all objects allocated in short-term memory and managed by
+	explicit refreshing.
+	</p>
+
+        <a name="people"><h2>People</h2></a>
+        <div style="z-index:900; position:relative;">
+        <h3>University of Salzburg</h3>
+        <ul>
+          <li><a href="//cs.uni-salzburg.at/~maigner">Martin Aigner</a>
+          <li><a href="//cs.uni-salzburg.at/~ahaas">Andreas Haas</a>
+          <li><a href="//cs.uni-salzburg.at/~ck">Christoph Kirsch</a>
+	  <li><a href="//cs.uni-salzburg.at/~mlippautz">Michael Lippautz</a>
+          <li><a href="//cs.uni-salzburg.at/~anas">Ana Sokolova</a>
+          <li>Stephanie Stroka
+          <li>Andreas Unterweger
+        </ul>
+        </div>
+
+
+        <a name="code">
+          <h2>Code
+          </h2>
+  	</a>
+
+	
+        <h3>libscm: Short-term Memory for the C programming language</h2>
+
+        <p> All code is released under a <a
+          href="https://github.com/cksystemsgroup/libscm/blob/master/LICENSE">BSD
+          style license</a> and can be found on <a
+          href="https://github.com/cksystemsgroup/libscm">github</a>. Consult the
+        <a
+          href="https://github.com/cksystemsgroup/libscm/blob/master/README.md">README</a>
+        file for instructions on how to build and run ACDC.</p>
+
+	<h3>Self-collecting Go-Routines: under construction</h3>
+	<h3>Self-collecting Mutators in Java: under construction</h3>
+
+
+	
+	
+        <a name="publications"><h2>Publications&nbsp;<small><a href="libscm.bib">bibtex</a></small></h2></a>
+        <div id="pubs"></div>
+	
+
+      </div>
+      <footer>
+        <p> &copy; <a href="http://cs.uni-salzburg.at/~ck">Computational Systems
+          Group</a> 2013. Website built with <a
+          href="http://twitter.github.com/bootstrap/" target="_blank">Twitter
+          Bootstrap</a> and <a href="http://jquery.com/"
+          target="_blank">jQuery</a>.  </p>
       </footer>
     </div>
-
-    
-
   </body>
 </html>
