added drone.io link and image

--- a/index.html
+++ b/index.html
@@ -130,8 +130,11 @@
 
 
         <a name="code">
-          <h2>Code
-          </h2>
+		<h2>Code
+			<a class="nolink" href="https://drone.io/github.com/cksystemsgroup/libscm/latest">
+				<img src="https://drone.io/github.com/cksystemsgroup/libscm/status.png" />
+			</a>
+          	</h2>
   	</a>
 
 	
