sorting of pubs

--- a/libscm.html
+++ b/libscm.html
@@ -23,19 +23,19 @@ M.&nbsp;Aigner, A.&nbsp;Haas, C.M. Kirsch, M.&nbsp;Lippautz, A.&nbsp;Sokolova, S
 
 </p>
 
+<p><a name="SBG1006"></a>
+
+Martin Aigner, Andreas Haas, Christoph&nbsp;M. Kirsch, and Ana Sokolova.
+ Short-term Memory for Self-collecting Mutators - Revised Version.
+ Technical Report TR 2010-06, University of Salzburg, June 2010.
+
+</p>
+
 <p><a name="SBG1003"></a>
 
 Martin Aigner, Andreas Haas, Christoph&nbsp;M. Kirsch, Hannes Payer, Andreas
   Sch&ouml;negger, and Ana Sokolova.
  Short-term Memory for Self-collecting Mutators.
- Technical Report TR 2010-03, University of Salzburg, 2010.
-
-</p>
-
-<p><a name="SBG1006"></a>
-
-Martin Aigner, Andreas Haas, Christoph&nbsp;M. Kirsch, and Ana Sokolova.
- Short-term Memory for Self-collecting Mutators - Revised Version.
- Technical Report TR 2010-06, University of Salzburg, 2010.
+ Technical Report TR 2010-03, University of Salzburg, March 2010.
 
 </p>
