--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <ul class="nav">
                 <li><a href="http://cs.uni-salzburg.at/~ck">Computational Systems Group</a></li>
               </ul>
-              <li class="dropdown">
+              <!--<li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   Other Projects
                   <b class="caret"></b>
@@ -75,7 +75,7 @@
                   <li class="divider"></li>
                   <li><a tabindex="-1" href="http://github.com/cksystemsgroup">cksystemsgroup</a></li>
                 </ul>
-              </li>
+		</li>-->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
