--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
         <div style="z-index:900; position:relative;">
 		<!--<h3>University of Salzburg</h3>-->
         <ul>
-          <li><a href="//cs.uni-salzburg.at/~maigner">Martin Aigner</a>
-          <li><a href="//cs.uni-salzburg.at/~ahaas">Andreas Haas</a>
-          <li><a href="//cs.uni-salzburg.at/~ck">Christoph Kirsch</a>
-	  <li><a href="//cs.uni-salzburg.at/~mlippautz">Michael Lippautz</a>
-          <li><a href="//cs.uni-salzburg.at/~anas">Ana Sokolova</a>
+          <li><a href="http://cs.uni-salzburg.at/~maigner">Martin Aigner</a>
+          <li><a href="http://cs.uni-salzburg.at/~ahaas">Andreas Haas</a>
+          <li><a href="http://cs.uni-salzburg.at/~ck">Christoph Kirsch</a>
+	  <li><a href="http://cs.uni-salzburg.at/~mlippautz">Michael Lippautz</a>
+          <li><a href="http://cs.uni-salzburg.at/~anas">Ana Sokolova</a>
           <li>Stephanie Stroka
           <li>Andreas Unterweger
         </ul>
