added fork-us ribbon

--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
 
     <div class="container">
 	    <div class="content">
+		    <div class="hero-unit ribbon-parent">
+        		<div class="ribbon">
+          		<a href="https://github.com/cksystemsgroup/libscm">Fork us on GitHub</a>
+        		</div>
 
-        <div class="page-header">
-          <h1>Short-term Memory for Self-collecting Mutators</h1>
-  	</div>
+			<h2>Short-term Memory for Self-collecting Mutators</h2>
 	
 	<p>
 	We propose a new memory model called short-term memory for managing
@@ -113,6 +115,7 @@
 	but not all objects allocated in short-term memory and managed by
 	explicit refreshing.
 	</p>
+  	</div>
 
         <a name="people"><h2>People</h2></a>
         <div style="z-index:900; position:relative;">
